# Resilient-AI-Human-Collaboration-

./: .fieldlink.json  .gitignore  AI_README.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Continuity-protocol.md  DRIFT_LOG.md  Example.checklists.md  GROUNDING.md  KEYWORDS.txt  Organize.md  Protocols.md  README.md  REVIEW.md  STACK.md  env.example  grounding_self_test.py  pyproject.toml
.github/workflows/: ci.yml
apps/protocol/: audit_cli.py  audit_log.py  capsule.py  checklist.py  cli.py  ground_cli.py  grounding.py  models.py  requirements.txt  state.py
apps/protocol/checklists/: bad-internet.yaml  context-recovery.yaml  hardware-swap.yaml  new-session.yaml  safe-ai-pipeline.yaml  status-declaration.yaml  video-transcript.yaml
apps/protocol/resilience/: __init__.py  audit_log.py  monoculture_detector.py  mutual_audit.py  signal_to_noise.py
apps/voice_assist/: cli.py  profiles.py  requirements.txt
docs/: continuity-protocol.md  example-checklists.md
docs/philosophy/: AI_README.md  DRIFT_LOG.md  INVITATION.md
scripts/: hf_get.sh  prep_cpu.sh  safe_ai_pipeline.sh  yt_bulk.sh
tests/: monoculture_detector.py  test_audit.py  test_capsule.py  test_checklist.py  test_cli.py  test_fieldlink.py  test_flow_static_axis.py  test_grounding.py  test_models.py  test_monoculture_detector.py  test_pipeline.py  test_state.py  test_voice_assist.py
