[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-ai-collab"
version = "0.1.0"
description = "Practical, resilient tools for AI-human collaboration — dyslexia-friendly learning, local AI, and offline/low-bandwidth environments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "rich",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
protocol = "apps.protocol.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["apps*"]
